# lib/api-spec/openapi.yaml
@@ -468,6 +468,9 @@ components:
           type: string
         phone:
           type: string
+        address:
+          type: string
+          nullable: true
         debtLimit:
           type: number
         totalDebt:
@@ -485,6 +488,9 @@ components:
           type: string
         phone:
           type: string
+        address:
+          type: string
+          nullable: true
         debtLimit:
           type: number
         note:
